I redid my changes from second branch here to solve the push rejection issue. I added a map page and changed the launcher icon.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,14 +9,17 @@
     <!-- INTERNET permission -->
     <uses-permission android:name="android.permission.INTERNET" />
 
+    <!-- location services permission -->
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+
     <application
         android:name=".medApp"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/med_launcher"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/med_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyExpirationDate">
         <activity
