--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -12,6 +12,9 @@ playServicesAnalyticsImpl = "18.2.0"
 identityJvm = "202411.1"
 adapters = "3.2.0-alpha11"
 material3 = "1.4.0"
+mapsCompose = "4.3.3"
+places = "3.5.0"
+playServiceMaps = "19.0.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -32,6 +35,9 @@ play-services-analytics-impl = { group = "com.google.android.gms", name = "play-
 identity-jvm = { group = "com.android.identity", name = "identity-jvm", version.ref = "identityJvm" }
 androidx-adapters = { group = "androidx.databinding", name = "adapters", version.ref = "adapters" }
 androidx-material3 = { group = "androidx.compose.material3", name = "material3", version.ref = "material3" }
+maps-compose = { module = "com.google.maps.android:maps-compose", version.ref = "mapsCompose"}
+places = { module = "com.google.android.libraries.places:places", version.ref = "places"}
+play-services-maps = { module = "com.google.android.gms:play-services-maps", version.ref = "playServiceMaps"}
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
